fix(layout): fix z-index for the different types of sidebar (IE issue)

--- a/src/framework/theme/components/layout/layout.component.scss
+++ b/src/framework/theme/components/layout/layout.component.scss
@@ -36,7 +36,6 @@
     flex-direction: row;
 
     /deep/ nb-sidebar {
-      z-index: auto;
       order: 0;
 
       &.right {
