--- a/src/framework/theme/components/sidebar/sidebar.component.scss
+++ b/src/framework/theme/components/sidebar/sidebar.component.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  z-index: 999;
+  z-index: auto;
   order: 0;
 
   .scrollable {
@@ -33,6 +33,7 @@
 
   &.fixed {
     position: absolute;
+    z-index: 999;
     top: 0;
     bottom: 0;
 
